--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
 				<div class="col-sm-6">
 					<h3>Hint:</h3>
 					<ul>
-						<li>Append #&lt;room name> after url will let you join other room.</li>
+						<li>Switch room by changing url hash #&lt;room name>. Then you can share this url to your friend to start your own game.</li>
 						<li>If you sick of deploy your fleet one by one, try "fast" deploy, which will deploy your ships to these locations. [a0-a4, b0-b3, c0-c3, d0-d2, e0-e1]</li>
 						<li>If you sick of fire step by step, try "auto" or "random" fire, which will enable automation 'til death.</li>
 					</ul>
@@ -74,4 +74,3 @@
 		</script>
 	</body>
 </html>
-
